--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ path = "src/bin.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ffmpeg-next = "7.0.2"
+xcap = "0.0.10"
