--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ path = "src/bin.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+local-ip-address = "0.6.1"
+scap = "0.0.5"
