--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ path = "src/bin.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eframe = "0.29.0"
+egui = "0.29.0"
 local-ip-address = "0.6.1"
