--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ image = "0.25.2"
 refbox = "0.3.0"
 replace_with = "0.1.7"
 axum = "0.8.1"
+tokio = { version = "1.44.1", features = ["rt", "macros", "rt-multi-thread"] } 
