--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ refbox = "0.3.0"
 replace_with = "0.1.7"
 axum = "0.8.1"
 tokio = { version = "1.44.1", features = ["rt", "macros", "rt-multi-thread"] } 
+tower-http = { version = "0.6.2", features = ["fs"] }
