--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,5 @@ axum = "0.8.1"
 tokio = { version = "1.44.1", features = ["rt", "macros", "rt-multi-thread"] } 
 tower-http = { version = "0.6.2", features = ["fs"] }
 fraction = "0.15.3"
+strum = "0.27.1"
+strum_macros = "0.27.1"
