--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ tower-http = { version = "0.6.2", features = ["fs"] }
 fraction = "0.15.3"
 strum = "0.27.1"
 strum_macros = "0.27.1"
+directories = "6.0.0"
