--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,5 @@ fraction = "0.15.3"
 strum = "0.27.1"
 strum_macros = "0.27.1"
 directories = "6.0.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
