--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ path = "src/bin.rs"
 
 [dependencies]
 eframe = "0.29.0"
-egui = "0.29.0"
+egui = { version = "0.29.0", features = ["serde"] }
 egui_extras ="0.29.1"
 local-ip-address = "0.6.1"
 regex = "1.10.5"
