--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ strum_macros = "0.27.1"
 directories = "6.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+serde_json_any_key = "2.0.0"
